--- a/www/simple/index.html
+++ b/www/simple/index.html
@@ -1,5 +1,6 @@
 <body>
-  <script src="https://cdn.jsdelivr.net/npm/waziup-js@0.0.18/lib/Waziup.js"></script>
+  <!--script src="https://cdn.jsdelivr.net/npm/waziup-js@0.0.18/lib/Waziup.js"></script-->
+  <script src="./Waziup.js"></script>
   <script>
     console.log("1")
     Waziup.ApiClient.instance.basePath = 'http://api.waziup.io/api/v1'
