--- a/www/complex/index.html
+++ b/www/complex/index.html
@@ -1,3 +1,4 @@
+<html>
 <body>
   <!--script src="https://cdn.jsdelivr.net/npm/waziup-js@0.0.18/lib/Waziup.js"></script-->
   <script src="./Waziup.js"></script>
@@ -7,11 +8,9 @@
     var names = []
     api.getSensors("waziup").then((sensors) =>{
       for(sensor of sensors) {
-        if(sensor.name) {
-          names.push(sensor.name)
-        }
+        names.push(sensor.id)
       }
-      document.getElementById("sensor_value").innerHTML = "Your  sensor value is: " + names;
+      document.getElementById("sensor_value").innerHTML = names;
     })
   </script>
   Sensor list:
