--- a/www/graph/index.html
+++ b/www/graph/index.html
@@ -1,7 +1,6 @@
 <html>
 <body>
-  <!--script src="https://cdn.jsdelivr.net/npm/waziup-js@0.0.18/lib/Waziup.js"></script-->
-  <script src="./Waziup.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/waziup-js@0.0.18/lib/Waziup.js"></script>
   <script src="./Chart.js"></script>
   <canvas id="myChart" width="800" height="600">Loading...</canvas>
   <script>
@@ -31,6 +30,7 @@
       });
     })
   </script>
+  test
 </body>
 </html>
 
