--- a/www/graph/index.html
+++ b/www/graph/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
   <script src="https://cdn.jsdelivr.net/npm/waziup-js@0.0.18/lib/Waziup.js"></script>
-  <script src="./Chart.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
   <canvas id="myChart" width="800" height="600">Loading...</canvas>
   <script>
     Waziup.ApiClient.instance.basePath = 'https://api.waziup.io:4430/api/v1'
@@ -30,7 +30,7 @@
       });
     })
   </script>
-  test
+  test2
 </body>
 </html>
 
