--- a/www/map/index.html
+++ b/www/map/index.html
@@ -6,9 +6,7 @@
 </head>
 <body>
   <div id="mapid" style="height:600px"></div>
-  <!--script src="https://cdn.jsdelivr.net/npm/waziup-js@0.0.18/lib/Waziup.js"></script-->
-  <script src="./Waziup.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/waziup-js@0.0.18/lib/Waziup.js"></script>
   <script>
       var mymap = L.map('mapid').setView([-1.97, 30.1], 13);
       L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
