--- a/www/map/index.html
+++ b/www/map/index.html
@@ -24,6 +24,7 @@
       L.marker([sensor.location.latitude, sensor.location.longitude]).addTo(mymap);
     })
   </script>
+  test
 </body>
 </html>
 
