--- a/www/map/index.html
+++ b/www/map/index.html
@@ -19,9 +19,11 @@
     Waziup.ApiClient.instance.basePath = 'http://api.waziup.io/api/v1'
     var api = new Waziup.SensorsApi()
     var markers = []
-    api.getSensor("waziup", "UPPA_Sensor6").then((sensor) =>{
-      console.log("data" + JSON.stringify(sensor))
-      L.marker([sensor.location.latitude, sensor.location.longitude]).addTo(mymap);
+    api.getSensors("waziup").then((sensors) =>{
+      for(sensor in sensors) {
+        console.log("data" + JSON.stringify(sensor))
+        L.marker([sensor.location.latitude, sensor.location.longitude]).addTo(mymap);
+      }
     })
   </script>
   test
