--- a/www/map/index.html
+++ b/www/map/index.html
@@ -8,7 +8,7 @@
   <div id="mapid" style="height:600px"></div>
   <script src="https://cdn.jsdelivr.net/npm/waziup-js@0.0.18/lib/Waziup.js"></script>
   <script>
-      var mymap = L.map('mapid').setView([-1.97, 30.1], 13);
+      var mymap = L.map('mapid').setView([-1.97, 30.1], 5);
       L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
          attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
          maxZoom: 18,
@@ -21,12 +21,14 @@
     var markers = []
     api.getSensors("waziup", {limit:1000}).then((sensors) =>{
       console.log("data" + JSON.stringify(sensors))
-      for(sensor of sensors) {        
-        L.marker([sensor.location.latitude, sensor.location.longitude]).addTo(mymap);
+      for(sensor of sensors) {
+        if(sensor.location) {
+          L.marker([sensor.location.latitude, sensor.location.longitude]).addTo(mymap);
+        }
       }
     })
   </script>
-  test3
+  test4
 </body>
 </html>
 
