--- a/www/complex/index.html
+++ b/www/complex/index.html
@@ -1,7 +1,6 @@
 <html>
 <body>
-  <!--script src="https://cdn.jsdelivr.net/npm/waziup-js@0.0.18/lib/Waziup.js"></script-->
-  <script src="./Waziup.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/waziup-js@0.0.18/lib/Waziup.js"></script>
   <script>
     Waziup.ApiClient.instance.basePath = 'https://api.waziup.io:4430/api/v1'
     var api = new Waziup.SensorsApi()
