--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <h1> WaziApps examples </h1>
 
 This website contains four examples of simple webapps using the Waziup platform:
-
-<li> <a href=simple> Retrieve a simgle sensor value </a> </li>
+<br/>
+<li> <a href=www/simple> Retrieve a simgle sensor value </a> </li>
+<li> <a href=www/complex> Retrieve a several sensor values </a> </li>
+<li> <a href=www/complex> Create a graph </a> </li>
+<li> <a href=www/complex> Create a map </a> </li>
