--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ This website contains four examples of simple webapps using the Waziup platform:
 <br/>
 <li> <a href=www/simple> Retrieve a simgle sensor value </a> </li>
 <li> <a href=www/complex> Retrieve a several sensor values </a> </li>
-<li> <a href=www/complex> Create a graph </a> </li>
-<li> <a href=www/complex> Create a map </a> </li>
+<li> <a href=www/graph> Create a graph </a> </li>
+<li> <a href=www/map> Create a map </a> </li>
