--- a/www/complex/index.html
+++ b/www/complex/index.html
@@ -7,7 +7,9 @@
     var names = []
     api.getSensors("waziup").then((sensors) =>{
       for(sensor of sensors) {
-        names.push(sensor.id)
+        for(measurement of sensors.measurements) {
+          names.push(sensor.id + " -> " + measurement.id + "= " + measurement.last_value.value + "\n")
+        }
       }
       document.getElementById("sensor_value").innerHTML = names;
     })
