--- a/www/graph/index.html
+++ b/www/graph/index.html
@@ -4,7 +4,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
   <canvas id="myChart" width="800" height="600">Loading...</canvas>
   <script>
-    Waziup.ApiClient.instance.basePath = 'https://api.waziup.io:4430/api/v1'
+    Waziup.ApiClient.instance.basePath = 'https://api.waziup.io/api/v1'
     var api = new Waziup.SensorsApi()
     var data = []
     var labels = []
