--- a/www/simple/index.html
+++ b/www/simple/index.html
@@ -5,7 +5,7 @@
   <script>
     Waziup.ApiClient.instance.basePath = 'https://api.waziup.io/api/v1'
     var api = new Waziup.SensorsApi()
-    api.getMeasurement("waziup", "UPPA_Sensor6", "TC").then((meas) =>{
+    api.getMeasurement("waziup", "ISPACE_Sensor78", "TC").then((meas) =>{
       document.getElementById("sensor_value").innerHTML = "The temperature is: " + meas.last_value + "C";
     })
   </script>
