--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1> WaziApps examples </h1>
+<h1> smartHOUSE city</h1>
 
 This website contains four examples of simple webapps using the Waziup platform:
 <br/>
