--- a/index.html
+++ b/index.html
@@ -6,3 +6,4 @@ This website contains four examples of simple webapps using the Waziup platform:
 <li> <a href=www/complex> Retrieve a several sensor values </a> </li>
 <li> <a href=www/graph> Create a graph </a> </li>
 <li> <a href=www/map> Create a map </a> </li>
+<li> <a href=www/complete> Starting boilerplate </a> </li>
