Rename App to Complete WebApp

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <h1> WaziApps examples </h1>
 
-This website contains four examples of simple webapps using the Waziup platform:
+This website contains five examples of simple webapps using the Waziup platform:
 <br/>
+<li> <a href=www/complete> Complete webapp example </a> </li>
 <li> <a href=www/simple> Retrieve a single sensor value </a> </li>
 <li> <a href=www/complex> Retrieve a several sensor values </a> </li>
 <li> <a href=www/graph> Create a graph </a> </li>
 <li> <a href=www/map> Create a map </a> </li>
-<li> <a href=www/complete> Starting boilerplate </a> </li>
