--- a/www/complete/index.html
+++ b/www/complete/index.html
@@ -18,47 +18,59 @@
     <!-- Sidebar -->
     <ul class="sidebar"  id="mtabs">
         <img src="waziupLogo.png" class="logo" alt="Waziup">
+        <h4 class="text-center">App Title</h4>
         <li class="active"><a href="#context" rel="context">Sensor Context</a></li>
         <li><a href="#value" rel="value">Sensor Value</a></li>
         <li><a href="#map" rel="map">Map</a></li>
-        <li><a href="#graph" rel="graph">Graph</a></li>  
+        <li><a href="#graph" rel="graph">Graph</a></li>
     </ul>
-
     <!-- Page Content -->
     <div class="content">
-      <div id="mtabs_content_container">
-        <div id="context" class="mtab_content" style="display: block;">
-          <div> 
-              <ul class="list-group">
-                <li class="list-group-item active">Sensor Context</li>
-                <li class="list-group-item" id="sensor_name_context">Name</li>
-                <li class="list-group-item" id="sensor_owner">Owner</li>
-                <li class="list-group-item" id="sensor_domain">Domain</li>
-                <li class="list-group-item" id="sensor_gateway">Gateway</li>
-              </ul>
+        <div id="mtabs_content_container">
+          <!-- Sensor Selecter -->
+          <div class="form-group row">
+              <div class="col-sm">
+                <label for="select">Sensors</label>
+                <select class="form-control" id="selectSensor" onchange="onSensorSelect()">
+                </select>
+              </div>
+              <div class="col-sm">
+                <label for="select">Measurements</label>
+                <select class="form-control" id="selectMeasurement" onchange="onMeasurementSelect()">
+                </select>
+              </div>
+          </div>
+          <div id="context" class="mtab_content" style="display: block;">
+              <div>
+                <ul class="list-group">
+                    <li class="list-group-item active">Sensor Context</li>
+                    <li class="list-group-item" id="sensor_name_context">Name</li>
+                    <li class="list-group-item" id="sensor_owner">Owner</li>
+                    <li class="list-group-item" id="sensor_domain">Domain</li>
+                    <li class="list-group-item" id="sensor_gateway">Gateway</li>
+                </ul>
+              </div>
+          </div>
+          <div id="value" class="mtab_content">
+              <div>
+                <ul class="list-group">
+                    <li class="list-group-item active">Sensor Value for Measurement <span id="sensor_value_id"></span></li>
+                    <li class="list-group-item" id="sensor_name_value">Name</li>
+                    <li class="list-group-item" id="sensor_last_value">Last Value</li>
+                    <li class="list-group-item" id="sensor_quantity_kind">Quantity Kind</li>
+                    <li class="list-group-item" id="sensor_sensing_device">Sensing Device</li>
+                    <li class="list-group-item" id="sensor_unit">Unit</li>
+                </ul>
+              </div>
+          </div>
+          <div id="map" class="mtab_content">
+              <div id="mapid" style="height:600px"></div>
+          </div>
+          <div id="graph" class="mtab_content">
+              <canvas id="myChart" width="800" height="600">Loading...</canvas>
           </div>
         </div>
-        <div id="value" class="mtab_content">
-            <div> 
-                <ul class="list-group">
-                  <li class="list-group-item active">Sensor Value for Measurement <span id="sensor_value_id"></span></li>
-                  <li class="list-group-item" id="sensor_name_value">Name</li>
-                  <li class="list-group-item" id="sensor_last_value">Last Value</li>
-                  <li class="list-group-item" id="sensor_quantity_kind">Quantity Kind</li>
-                  <li class="list-group-item" id="sensor_sensing_device">Sensing Device</li>
-                  <li class="list-group-item" id="sensor_unit">Unit</li>
-                </ul>
-            </div>
-        </div>
-        <div id="map" class="mtab_content">
-            <div id="mapid" style="height:600px"></div>
-        </div>
-        <div id="graph" class="mtab_content">
-            <canvas id="myChart" width="800" height="600">Loading...</canvas>
-        </div>
-      </div>
     </div>
-
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -68,39 +80,101 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
     <script>
-    $(document).ready(function(){
-    //  When user clicks on tab, this code will be executed
-    $("#mtabs li").click(function() {
+    $(document).ready(function () {
+      //  When user clicks on tab, this code will be executed
+      $("#mtabs li").click(function () {
         //  First remove class "active" from currently active tab
         $("#mtabs li").removeClass('active');
- 
+
         //  Now add class "active" to the selected/clicked tab
-       $(this).addClass("active");
- 
+        $(this).addClass("active");
+
         //  Hide all tab content
         $(".mtab_content").hide();
- 
+
         //  Here we get the href value of the selected tab
         var selected_tab = $(this).find("a").attr("href");
- 
+
         //  Show the selected tab content
         $(selected_tab).fadeIn();
- 
+
         //  At the end, we add return false so that the click on the link is not executed
         return false;
-    });
+      });
     });
     </script>
     <script>
-      Waziup.ApiClient.instance.basePath = 'https://api.waziup.io/api/v1'
-      var api = new Waziup.SensorsApi()
-      // my sensor values
-      var domain = "waziup";
-      var sensor_id = "Sensor2-ea0541de1ab7132a1d45b85f9b2139f5";
-      var measurement_id = "TC1";
+    Waziup.ApiClient.instance.basePath = 'https://api.waziup.io/api/v1'
+    var api = new Waziup.SensorsApi()
+    // default sensor values
+    var domain = "waziup";
+    var sensor_id = "Sensor2-ea0541de1ab7132a1d45b85f9b2139f5";
+    var measurement_id = "TC1";
+
+    // initializing
+    loadSensors();
+    loadMeasurements();
+
+    function loadSensors() {
+      // list of sensors
+      var selectSensor = document.getElementById("selectSensor")
+      api.getSensors("waziup").then((sensors) => {
+        for (sensor of sensors) {
+          // create and populate an option for the select
+          var opt = document.createElement("option");
+          opt.value = sensor.id;
+          opt.innerHTML = sensor.id;
+
+          // then append it to the select element
+          selectSensor.appendChild(opt);
+        }
+      })
+    }
+
+    function loadMeasurements() {
+      // list of measurements
+      var selectMeasurement = document.getElementById("selectMeasurement");
+      api.getSensorMeasurements("waziup", sensor_id).then((measurements) => {
+        measurements.forEach((measurement,index) => {
+          // set measurement_id to the first measurement
+          if(index==0){
+            measurement_id = measurement.id
+          }
+          // create and populate an option for the select
+          var opt = document.createElement("option");
+          opt.value = measurement.id;
+          opt.innerHTML = measurement.id;
+
+          // then append it to the select element
+          selectMeasurement.appendChild(opt);
+        });
+        loadValues();
+      })
+    }
+
+    // select sensor
+    function onSensorSelect() {
+      var sensorsList = document.getElementById("selectSensor");
+      var selectedSensor = sensorsList.options[sensorsList.selectedIndex].value;
+      sensor_id = selectedSensor;
+      // reset measurements list
+      document.getElementById('selectMeasurement').innerText = null
+      loadMeasurements();
+    }
+
+    // select measurement
+    function onMeasurementSelect() {
+      var measurementsList = document.getElementById("selectMeasurement");
+      var selectedMeasurement = measurementsList.options[measurementsList.selectedIndex].value;
+      measurement_id = selectedMeasurement;
+      loadValues();
+    }
+
+    // load sensor and measurement values
+    function loadValues() {
 
       // sensor context
-      api.getSensor(domain,sensor_id ).then((sensor) =>{
+      api.getSensor(domain, sensor_id).then((sensor) => {
         document.getElementById("sensor_name_context").innerHTML = "Name : " + sensor.name;
         document.getElementById("sensor_owner").innerHTML = "Owner : " + sensor.owner;
         document.getElementById("sensor_domain").innerHTML = "Domain : " + sensor.domain;
@@ -108,57 +182,60 @@
       })
 
       // sensor value
-      api.getMeasurement(domain, sensor_id, measurement_id).then((sensor) =>{
+      api.getMeasurement(domain, sensor_id, measurement_id).then((sensor) => {
         document.getElementById("sensor_value_id").innerHTML = sensor.id;
         document.getElementById("sensor_name_value").innerHTML = "Name : " + sensor.name;
         document.getElementById("sensor_last_value").innerHTML = "Last Value : " + sensor.last_value;
         document.getElementById("sensor_quantity_kind").innerHTML = "Quantity Kind : " + sensor.quantity_kind;
         document.getElementById("sensor_sensing_device").innerHTML = "Sensing Device : " + sensor.sensing_device;
-        document.getElementById("sensor_unit").innerHTML = "Unit : " + sensor.unit; 
+        document.getElementById("sensor_unit").innerHTML = "Unit : " + sensor.unit;
       });
 
       // graph with sensor values
       var data = []
       var labels = []
-      api.getMeasurementValues(domain, sensor_id, measurement_id, {'lastN': "20"}).then((values) =>{
-        console.log("data" + JSON.stringify(values))
-        for(value of values) {
+      api.getMeasurementValues(domain, sensor_id, measurement_id, {
+        'lastN': "20"
+      }).then((values) => {
+        for (value of values) {
           data.push(value.value)
           labels.push(value.timestamp)
         }
         var ctx = document.getElementById("myChart").getContext('2d');
         var myChart = new Chart(ctx, {
-            type: 'line',
-            data: {
-                labels: labels,
-                datasets: [{
-                    label: 'Sensor values',
-                    data: data
-                }]
-            },
-            options: {
-                responsive: false
-            }
+          type: 'line',
+          data: {
+            labels: labels,
+            datasets: [{
+              label: 'Sensor values',
+              data: data
+            }]
+          },
+          options: {
+            responsive: false
+          }
         });
       })
-      
-      // map
-      var mymap = L.map('mapid').setView([-1.97, 30.1], 8);
-      L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
-         attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
-         maxZoom: 8,
-         id: 'mapbox.streets',
-         accessToken: 'pk.eyJ1IjoiY2R1cG9udDIiLCJhIjoiY2pnZTVkZ2xsMGxyZTJ4cjA5dDZ4cjNneSJ9.NJT7CULfcY0mjeavffR_vg'
-      }).addTo(mymap);
-    
-      var markers = []
-      api.getSensors(domain, {limit:1000}).then((sensors) =>{
-        for(sensor of sensors) {
-          if(sensor.location) {
-            L.marker([sensor.location.latitude, sensor.location.longitude]).addTo(mymap);
-          }
+    }
+    // map
+    var mymap = L.map('mapid').setView([-1.97, 30.1], 8);
+    L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
+      attribution: 'Map data © <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
+      maxZoom: 8,
+      id: 'mapbox.streets',
+      accessToken: 'pk.eyJ1IjoiY2R1cG9udDIiLCJhIjoiY2pnZTVkZ2xsMGxyZTJ4cjA5dDZ4cjNneSJ9.NJT7CULfcY0mjeavffR_vg'
+    }).addTo(mymap);
+
+    var markers = []
+    api.getSensors(domain, {
+      limit: 1000
+    }).then((sensors) => {
+      for (sensor of sensors) {
+        if (sensor.location) {
+          L.marker([sensor.location.latitude, sensor.location.longitude]).addTo(mymap);
         }
-      })
+      }
+    })
     </script>
   </body>
 </html>
