--- a/www/complete/index.html
+++ b/www/complete/index.html
@@ -108,8 +108,8 @@
     var api = new Waziup.SensorsApi()
     // default sensor values
     var domain = "waziup";
-    var sensor_id = "Sensor2-ea0541de1ab7132a1d45b85f9b2139f5";
-    var measurement_id = "TC1";
+    var sensor_id = "UPPA-TESTS_Sensor6";
+    var measurement_id = "TC";
     var measurementValues = [];
     var graphLabel = [];
     var myChart;
