Update to api v2

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 This website contains five examples of simple webapps using the Waziup platform:
 <br/>
 <li> <a href=www/complete> Complete webapp example </a> </li>
-<li> <a href=www/simple> Retrieve a single sensor value </a> </li>
-<li> <a href=www/complex> Retrieve a several sensor values </a> </li>
+<li> <a href=www/simple> Retrieve a single device </a> </li>
+<li> <a href=www/complex> Retrieve a several devices </a> </li>
 <li> <a href=www/graph> Create a graph </a> </li>
 <li> <a href=www/map> Create a map </a> </li>
