--- a/index.html
+++ b/index.html
@@ -7,3 +7,4 @@ This website contains five examples of simple webapps using the Waziup platform:
 <li> <a href=www/complex> Retrieve a several devices </a> </li>
 <li> <a href=www/graph> Create a graph </a> </li>
 <li> <a href=www/map> Create a map </a> </li>
+Modifica
