--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 This website contains five examples of simple webapps using the Waziup platform:
 <br/>
+yep
 <li> <a href=www/complete> Complete webapp example </a> </li>
 <li> <a href=www/simple> Retrieve a single device </a> </li>
 <li> <a href=www/complex> Retrieve a several devices </a> </li>
