--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1> WaziApps examples </h1>
-
+<h2>Claudia</h2>
 This website contains five examples of simple webapps using the Waziup platform:
 <br/>
 <li> <a href=www/complete> Complete webapp example </a> </li>
