update to dashboard

--- a/www/complete/index.html
+++ b/www/complete/index.html
@@ -26,9 +26,9 @@
     <!-- Sidebar -->
     <ul class="sidebar" id="mtabs">
       <img src="waziupLogo.png" class="logo" alt="Waziup" />
-      <h4 class="text-center">App Title</h4>
+      <h4 class="text-center">Smart Real Estate Monitor</h4>
       <li class="active">
-        <a href="#context" rel="context">Device Context</a>
+        <a href="#context" rel="context">24/7 real estate monitor system</a>
       </li>
       <li><a href="#value" rel="value">Device Value</a></li>
       <li><a href="#map" rel="map">Map</a></li>
