add id for device

--- a/www/complete/index.html
+++ b/www/complete/index.html
@@ -134,7 +134,7 @@
       var devicesApi = new Waziup.DevicesApi();
       var sensorsApi = new Waziup.SensorsApi();
       // default device values
-      var device_id = "UGB-PILOTS_Sensor200";
+      var device_id = "60dce1c278452400067ca0ee";
       var sensor_id = "TP";
       var sensorValues = [];
       var graphLabel = [];
