--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href=www/smartmamo> <img src="https://xoliswa.github.io/WaziApps-examples/smartmamo.png" style="width: 100%; z-index: 0;"></a>
+<a href=www/smartmamo> <img src="https://xoliswa.github.io/WaziApps-examples/smartmamo.png" style="width: 100%; z-index: 0; object-fit: contain; height: 100vh;"></a>
