--- a/www/smartmamo/index.html
+++ b/www/smartmamo/index.html
@@ -28,10 +28,9 @@
       <img src="waziupLogo.png" class="logo" alt="Waziup" />
       <h4 class="text-center">Smart Real Estate Monitor</h4>
       <li class="active">
-        <a href="#context" rel="context">24/7 real estate monitor system</a>
+        <a href="#context" rel="context">Device</a>
       </li>
-      <li><a href="#value" rel="value">Device Value</a></li>
-      <li><a href="#map" rel="map">Map</a></li>
+      <li><a href="#value" rel="value">Sensors</a></li>
       <li><a href="#graph" rel="graph">Graph</a></li>
     </ul>
     <!-- Page Content -->
