--- a/www/map/index.html
+++ b/www/map/index.html
@@ -1,41 +1,28 @@
 <html>
   <head>
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
-    />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"/>
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
   </head>
   <body>
     <div id="mapid" style="height:600px"></div>
-    <script src="https://cdn.jsdelivr.net/npm/waziup-js@2.0.0-alpha.10/lib/Waziup.js"></script>
     <script>
       var mymap = L.map("mapid").setView([-1.97, 30.1], 8);
-      L.tileLayer(
-        "https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}",
-        {
-          attribution:
-            'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
-          maxZoom: 8,
-          id: "mapbox/streets-v11",
-          accessToken:
-            "pk.eyJ1IjoiY2R1cG9udDIiLCJhIjoiY2pnZTVkZ2xsMGxyZTJ4cjA5dDZ4cjNneSJ9.NJT7CULfcY0mjeavffR_vg"
-        }
-      ).addTo(mymap);
+      L.tileLayer("https://api.mapbox.com/styles/v1/mapbox/streets-v11/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoiY2R1cG9udDIiLCJhIjoiY2pnZTVkZ2xsMGxyZTJ4cjA5dDZ4cjNneSJ9.NJT7CULfcY0mjeavffR_vg")
+       .addTo(mymap);
 
-      Waziup.ApiClient.instance.basePath = "https://api.waziup.io/api/v2";
-      var api = new Waziup.DevicesApi();
-      var markers = [];
-      api.getDevices("waziup", { limit: 1000 }).then(devices => {
-        console.log("data" + JSON.stringify(devices));
-        for (device of devices) {
-          if (device.location) {
-            L.marker([
-              device.location.latitude,
-              device.location.longitude
-            ]).addTo(mymap);
-          }
-        }
+      fetch("https://api.waziup.io/api/v2/devices/")
+         .then(res => res.json())
+         .then(devices => {
+           var markers = [];
+           console.log("data" + JSON.stringify(devices));
+           for (device of devices) {
+             if (device.location) {
+               L.marker([
+                 device.location.latitude,
+                 device.location.longitude
+               ]).addTo(mymap);
+             }
+           }
       });
     </script>
   </body>
